--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1264,8 +1264,8 @@ $hachi_passage
 $hachi_passage
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_tram1_00false&quot; and $hachi_movement == &quot;Sniffing&quot;&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_tram1_01/Hachi sniffs the air, detecting the approach of Leo, the friendly tram conductor whose shift was ending.
-After getting of the tram, Leo said to Hachi, &#39;Well, well, if it isn&#39;t Hachi! What&#39;s got your nose twitching today, buddy?&#39; &lt;&lt;print $hachi_bank&gt;&gt; &quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &lt;&lt;print &quot;hachi_tram1_01/Hachi sniffs the air, detecting the approach of Leo, the friendly tram conductor whose shift was ending.
+After getting of the tram, Leo said to Hachi, &#39;Well, well, if it isn&#39;t Hachi! What&#39;s got your nose twitching today, buddy?&#39; $hachi_bank&quot;&gt;&gt; &gt;&gt;
 &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -1296,7 +1296,7 @@ After getting of the tram, Leo said to Hachi, &#39;Well, well, if it isn&#39;t H
 $hachi_passage
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_tram4_00false&quot; and ($hachi_movement == &quot;Barking&quot; || $hachi_movement == &quot;Sniffing&quot; || $hachi_movement == &quot;Wiggling tail&quot;)&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_tram4_01/You and Buro make quite the pair, Hachi. You know, I&#39;ve seen him chatting with Mr. Al Mansouri. Maybe you should go check there! Or maybe you can visit Mrs. Novakova near the fountain, I am sure she might have seen him too.&#39; &#39;$hachi_bank&#39; &quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_tram4_01/You and Buro make quite the pair, Hachi. You know, I&#39;ve seen him chatting with Mr. Al Mansouri. Maybe you should go check there! Or maybe you can visit Mrs. Novakova near the fountain, I am sure she might have seen him too.&#39; $hachi_bank&quot;&gt;&gt;
 &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
