--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -842,6 +842,7 @@ Loading variables...
 
 &lt;div id=&quot;topContainer&quot;&gt;
   &lt;div id=&quot;buttonArea&quot;&gt;
+ 	 $hachi_turn
       &lt;img src=&quot;https://danielecheverri.github.io/logo.svg&quot; alt=&quot;Searching for us&quot; class=&quot;svg-logo&quot;&gt;
           &lt;&lt;button &#39;&lt;&lt;live _buttonCaption&gt;&gt;&#39; &gt;&gt;
               &lt;&lt;run Engine.restart()&gt;&gt;
@@ -1401,7 +1402,7 @@ $hachi_passage
 &lt;&lt;liveblock&gt;&gt;
 $hachi_passage
 
-&lt;&lt;if $hachi_narrating == &quot;hachi_stairs2_00false&quot; and $hachi_movement == &quot;Wiggling tail&quot;&gt;&gt;
+&lt;&lt;if $hachi_narrating == &quot;hachi_stairs2_00false&quot; and $hachi_movement == &quot;Wagging the tail&quot;&gt;&gt;
   &lt;&lt;set $hachi_passage to &quot;hachi_stairs2_01/Mr. Al Mansouri: &#39;Welcome, little friend! Sit with us and hear tales of adventure on the high seas. Once upon a time, in the heart of the Gulf Sea...&#39;&quot;&gt;&gt;
   &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
@@ -1494,7 +1495,7 @@ $hachi_passage
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_fountain1_01false&quot; and $hachi_part_dir == &quot;down&quot; and $hachi_part_mov == &quot;head&quot;&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_fountain1_02/Mrs. Novakova: &quot;Ah, hello there, furry one. Lay next to me and let me tell you about the days of my youth, dancing across stages far and wide,&quot; while petting Hachi’s head.&quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_fountain1_02/Mrs. Novakova: &#39;Ah, hello there, furry one. Lay next to me and let me tell you about the days of my youth, dancing across stages far and wide,&#39; while petting Hachi’s head.&quot;&gt;&gt;
 &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -1511,7 +1512,7 @@ $hachi_passage
 &lt;&lt;liveblock&gt;&gt;
 $hachi_passage
 
-&lt;&lt;if $hachi_narrating == &quot;hachi_fountain2_01false&quot; and ($hachi_movement == &quot;Standing front leg || $hachi_movement == &quot;Standing back leg)&gt;&gt;
+&lt;&lt;if $hachi_narrating == &quot;hachi_fountain2_01false&quot; and ($hachi_movement == &quot;Standing front leg&quot; || $hachi_movement == &quot;Standing back leg&quot;)&gt;&gt;
   &lt;&lt;set $hachi_passage to &quot;hachi_fountain3_00/Mrs. Novakova notices that Hachi feels worried.&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -1903,7 +1904,6 @@ if (window.$avatar_comment !== window._prevAvatarComment) {
 &lt;&lt;/script&gt;&gt;</tw-passagedata><tw-passagedata pid="70" name="hachi_act2_transition" tags="" position="1400,1175" size="100,100">&lt;&lt;nobr&gt;&gt;
 &lt;&lt;set variables().hachi_checkpoint_dist to $hachi_checkpoint_dist&gt;&gt;
 &lt;&lt;set $hachi_comment to &quot;&quot;&gt;&gt;
-$hachi_turn
 &lt;&lt;script&gt;&gt;
 makeComments(&#39;hachi&#39;,&#39;observes&#39;,40);
 console.log(variables().hachi_comment);
