--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -857,7 +857,6 @@ Loading variables...
           &lt;&lt;include &quot;both_preamble&quot;&gt;&gt;
 	&lt;/div&gt;
 	&lt;div id=&quot;hachi_story&quot;&gt;
-   	 		$hachi_turn
            &lt;&lt;include &quot;hachi_act2_transition&quot;&gt;&gt;	
 	&lt;/div&gt;
 &lt;/div&gt;
@@ -1304,7 +1303,7 @@ $hachi_passage
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $hachi_nextAct is true and hachi_narrating == &quot;hachi_tram4_01false&quot; &gt;&gt;
-	&lt;&lt;set $hachi_turn == $hachi_turn+1&gt;&gt;
+	&lt;&lt;set $hachi_turn = $hachi_turn+1&gt;&gt;
     &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
   		&lt;&lt;include&quot;hachi_act2_transition&quot;&gt;&gt;
   &lt;&lt;/replace&gt;&gt;
@@ -1445,7 +1444,7 @@ $hachi_passage
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $hachi_nextAct is true and hachi_narrating == &quot;hachi_stairs4_01false&quot; &gt;&gt;
-  &lt;&lt;set $hachi_turn == $hachi_turn+1&gt;&gt;
+  &lt;&lt;set $hachi_turn = $hachi_turn+1&gt;&gt;
   &lt;&lt;set $hachi_nextAct to false&gt;&gt;
     &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
   		&lt;&lt;include&quot;hachi_act2_transition&quot;&gt;&gt;
@@ -1559,7 +1558,7 @@ $hachi_passage
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $hachi_nextAct is true and hachi_narrating == &quot;hachi_fountain4_01false&quot; &gt;&gt;
- &lt;&lt;set $hachi_turn == $hachi_turn+1&gt;&gt;
+ &lt;&lt;set $hachi_turn = $hachi_turn+1&gt;&gt;
  &lt;&lt;set $hachi_nextAct to false&gt;&gt;
     &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
   		&lt;&lt;include&quot;hachi_act2_transition&quot;&gt;&gt;
@@ -1927,6 +1926,7 @@ console.log(variables().hachi_comment);
 &lt;&lt;/repeat&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
+$hachi_turn
     &lt;&lt;if $hachi_checkpoint is &quot;hachi_tram&quot;&gt;&gt;
         &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
             &lt;&lt;include &quot;hachi_tram_1&quot;&gt;&gt;
