--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1281,6 +1281,7 @@ After getting of the tram, Leo said to Hachi, &#39;Well, well, if it isn&#39;t H
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="26" name="hachi_tram_4" tags="" position="1150,1000" size="100,100">&lt;&lt;nobr&gt;&gt;
+&lt;&lt;set $hachi_turn = $hachi_turn+1&gt;&gt;
 &lt;&lt;set $hachi_passage to &quot;hachi_tram4_00/Leo recognizes Hachi and Buro’s friendship and tells Hachi about Lina, the bank teller and Ms. Novakova at the fountain.&quot;&gt;&gt;
 
 &lt;&lt;if $hachi_turn == 3&gt;&gt;
@@ -1304,8 +1305,7 @@ $hachi_passage
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $hachi_nextAct is true and hachi_narrating == &quot;hachi_tram4_01false&quot; &gt;&gt;
-	&lt;&lt;set $hachi_turn = $hachi_turn+1&gt;&gt;
-    &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
+	    &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
   		&lt;&lt;include&quot;hachi_act2_transition&quot;&gt;&gt;
   &lt;&lt;/replace&gt;&gt;
   &lt;&lt;set $hachi_nextAct to false&gt;&gt;
@@ -1422,6 +1422,7 @@ $hachi_passage
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="31" name="hachi_stairs_4" tags="" position="1150,1325" size="100,100">&lt;&lt;nobr&gt;&gt;
+&lt;&lt;set $hachi_turn = $hachi_turn+1&gt;&gt;
 &lt;&lt;set $hachi_passage to &quot;hachi_stairs4_00/As Mr. Al Mansouri continues his story, he notices Hachi&#39;s anxious behavior and realizes that Buro is not with him.&quot;&gt;&gt;
 
 &lt;&lt;if $hachi_turn == 3&gt;&gt;
@@ -1445,7 +1446,6 @@ $hachi_passage
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $hachi_nextAct is true and hachi_narrating == &quot;hachi_stairs4_01false&quot; &gt;&gt;
-  &lt;&lt;set $hachi_turn = $hachi_turn+1&gt;&gt;
   &lt;&lt;set $hachi_nextAct to false&gt;&gt;
     &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
   		&lt;&lt;include&quot;hachi_act2_transition&quot;&gt;&gt;
@@ -1460,7 +1460,7 @@ $hachi_passage
 $hachi_passage
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_fountain2_00false&quot; and $hachi_movement == &quot;Barking&quot;&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_fountain2_01/Mrs. Novakova: &#39;Look at them, dear. Majestic creatures, aren&#39;t they? They remind me of my days on stage, gliding and twirling with grace,&#39; drawing a smile in her face.&quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_fountain2_01/Mrs. Novakova: &#39;Look at them, dear. Majestic creatures, aren&#39;t they? They remind me of my days on stage, gliding and twirling with grace,&#39; drawing a smile in her face. Come, stand next to me.&quot;&gt;&gt;
  &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -1527,15 +1527,22 @@ $hachi_passage
 &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
+&lt;&lt;if $hachi_narrating == &quot;hachi_fountain3_01false&quot;&gt;&gt;
+  &lt;&lt;if $hachi_movement !==&quot;none&quot; and $hachi_movement !== &quot;&quot; and $hachi_movement !== &quot;Barking&quot;&gt;&gt;
+  &lt;&lt;if typeof _prevhachiMovement === &#39;undefined&#39;&gt;&gt;&lt;&lt;set _prevhachiMovement to $hachi_movement&gt;&gt;&lt;&lt;elseif _prevhachiMovement !== $hachi_movement&gt;&gt;&lt;&lt;script&gt;&gt;makeShortComments(&#39;hachi&#39;, &#39;notmoving&#39;); console.log(variables().hachi_comment); &lt;&lt;/script&gt;&gt;&lt;&lt;set _prevhachiMovement to variables().hachi_movement&gt;&gt;&lt;&lt;if $hachi_comment !== _prevhachiComment&gt;&gt;&lt;&lt;set _prevhachiComment to $hachi_comment&gt;&gt;&lt;&lt;script&gt;&gt;var passage_temp = variables().hachi_comment;const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();console.log(renderedText);variables().hachi_passage = renderedText;&lt;&lt;/script&gt;&gt;&lt;&lt;set $hachi_passage to variables().hachi_passage&gt;&gt;&lt;&lt;/if&gt;&gt;&lt;&lt;/if&gt;&gt;
+  &lt;&lt;/if&gt;&gt;
+&lt;&lt;/if&gt;&gt;
+
 &lt;&lt;if $hachi_nextAct is true and hachi_narrating == &quot;hachi_fountain3_01false&quot; &gt;&gt;
   &lt;&lt;set $hachi_nextAct to false&gt;&gt;
     &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
-  		&lt;&lt;include&quot;hachi_fountain_3&quot;&gt;&gt;
+  		&lt;&lt;include&quot;hachi_fountain_4&quot;&gt;&gt;
   &lt;&lt;/replace&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="39" name="hachi_fountain_4" tags="" position="1775,1000" size="100,100">&lt;&lt;nobr&gt;&gt;
+&lt;&lt;set $hachi_turn = $hachi_turn+1&gt;&gt;
 &lt;&lt;set $hachi_passage to &quot;hachi_fountain4_00/Mrs. Novakova spots a shiny coin near the fountain&#39;s edge and encourages Hachi to retrieve it.&quot;&gt;&gt;
 
 &lt;&lt;if $hachi_turn == 3&gt;&gt;
@@ -1559,7 +1566,6 @@ $hachi_passage
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $hachi_nextAct is true and hachi_narrating == &quot;hachi_fountain4_01false&quot; &gt;&gt;
- &lt;&lt;set $hachi_turn = $hachi_turn+1&gt;&gt;
  &lt;&lt;set $hachi_nextAct to false&gt;&gt;
     &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
   		&lt;&lt;include&quot;hachi_act2_transition&quot;&gt;&gt;
